updated display styling and added animation to the contact button

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#7400AB" />
     <meta
       name="description"
-      content="Tolulope Saliu. Front-end developer based in Lagos, Nigeria."
+      content="Tolulope Saliu. Front-end developer based in Lagos, Nigeria. I have great experience working remotely and delivering amazing results."
     />
+    <meta name="keywords" content="Tolulope Saliu, Tolulope Olamide Saliu, Tolulope" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
