--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#7400AB" />
     <meta
       name="description"
-      content="Tolulope Saliu. Front-end developer based in Lagos, Nigeria. I have great experience working remotely and delivering amazing results."
+      content="Tolulope Saliu. Software engineer based in Lagos, Nigeria. I have about seven years experience working remotely and delivering amazing results."
     />
     <meta name="keywords" content="Tolulope Saliu, Tolulope Olamide Saliu, Tolulope" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tolulope | Frontend Engineer</title>
+    <title>Tolulope | Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
